; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_mktag.c_verify_object.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_mktag.c_verify_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@the_repository = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, i8*)* @verify_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_object(%struct.object_id* %0, i8* %1) #0 {
  %3 = alloca %struct.object_id*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.object_id*, align 8
  store %struct.object_id* %0, %struct.object_id** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 -1, i32* %5, align 4
  %10 = load %struct.object_id*, %struct.object_id** %3, align 8
  %11 = call i8* @read_object_file(%struct.object_id* %10, i32* %6, i64* %7)
  store i8* %11, i8** %8, align 8
  %12 = load i32, i32* @the_repository, align 4
  %13 = load %struct.object_id*, %struct.object_id** %3, align 8
  %14 = call %struct.object_id* @lookup_replace_object(i32 %12, %struct.object_id* %13)
  store %struct.object_id* %14, %struct.object_id** %9, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %31

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @type_from_string(i8* %19)
  %21 = icmp eq i32 %18, %20
  br i1 %21, label %22, label %28

22:                                               ; preds = %17
  %23 = load %struct.object_id*, %struct.object_id** %9, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i64, i64* %7, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @check_object_signature(%struct.object_id* %23, i8* %24, i64 %25, i8* %26)
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %22, %17
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @free(i8* %29)
  br label %31

31:                                               ; preds = %28, %2
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i8* @read_object_file(%struct.object_id*, i32*, i64*) #1

declare dso_local %struct.object_id* @lookup_replace_object(i32, %struct.object_id*) #1

declare dso_local i32 @type_from_string(i8*) #1

declare dso_local i32 @check_object_signature(%struct.object_id*, i8*, i64, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
